# RealsenseRecord

./: .gitmodules  CMakeLists.txt
config/: realsenseCaptureArguments.cfg  recordingOutputDirectory.cfg
include/: RealsenseCapture.h  utils.h
include/RealsenseRecording/: RealsenseCapture.h  utils.h
include/RealsenseRecording/recording/: ReadRecording.h  Recording.h  RecordingParameters.h  RecordingParametersType.h  WriteRecording.h
include/recording/: ReadRecording.h  Recording.h  RecordingParameters.h  WriteRecording.h
private_include/: configDirectoryLocation.h  utils.h
src/: RealsenseCapture.cpp  configDirectoryLocation.cpp  main.cpp  utils.cpp
src/recording/: ReadRecording.cpp  Recording.cpp  RecordingParameters.cpp  WriteRecording.cpp
