cmake_minimum_required(VERSION 3.17)
project(RealsenseRecord)

set(CMAKE_CXX_STANDARD 14)

option(WITH_OPENCV "IF TO USE OPENCV IN THIS PROJECT" ON)
set(OPENCV_VERSION "" CACHE STRING "The opencv version to use in the project")

find_package(OpenMP REQUIRED)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
set(EXTERNAL_LIBS ${OpenMP_CXX_LIBRARIES} ${EXTERNAL_LIBS})

if (UNIX)
    set(EXTERNAL_LIBS pthread ${EXTERNAL_LIBS})
endif ()

find_package(Eigen3 3.3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})
set(EXTERNAL_LIBS Eigen3::Eigen ${EXTERNAL_LIBS})

if (${WITH_OPENCV})
    if ("${OPENCV_VERSION}" STREQUAL "")
        find_package(OpenCV REQUIRED)
    else ()
        find_package(OpenCV ${OPENCV_VERSION} REQUIRED)
    endif ()
    include_directories(${OpenCV_INCLUDE_DIRS})
    set(EXTERNAL_LIBS ${OpenCV_LIBS} ${EXTERNAL_LIBS})
endif ()

find_package(realsense2 REQUIRED)
set(EXTERNAL_LIBS ${realsense2_LIBRARY} ${EXTERNAL_LIBS})
if (WIN32)
    include_directories("C:/Program Files (x86)/librealsense2/include")
endif ()

set(ANDREI_UTILS_PATH "" CACHE PATH "The (absolute!) path to the AndreiUtils repository directory")
if ("${ANDREI_UTILS_PATH}" STREQUAL "")
    message(FATAL_ERROR "No path to AndreiUtils directory provided")
endif ()
message("AndreiUtils path set to ${ANDREI_UTILS_PATH}")
set(ANDREI_UTILS_DIR "${ANDREI_UTILS_PATH}")
if (UNIX)
    set(ANDREI_UTILS_LIB_FORMAT ".a")
else (UNIX)
    set(ANDREI_UTILS_LIB_FORMAT ".a")
endif ()
set(ANDREI_UTILS_INCLUDE "${ANDREI_UTILS_DIR}/include" "${ANDREI_UTILS_DIR}/json")
set(ANDREI_UTILS_LIB "${ANDREI_UTILS_DIR}/build-release/libAndreiUtils${ANDREI_UTILS_LIB_FORMAT}")
message("AndreiUtils include dirs set to ${ANDREI_UTILS_INCLUDE}")
message("AndreiUtils library path set to ${ANDREI_UTILS_LIB}")
include_directories(${ANDREI_UTILS_INCLUDE})
set(EXTERNAL_LIBS ${ANDREI_UTILS_LIB} ${EXTERNAL_LIBS})

include_directories("include" "private_include")

add_library(RealsenseRecording src/RealsenseCapture.cpp src/recording/RecordingParameters.cpp src/recording/Recording.cpp src/recording/ReadRecording.cpp src/recording/WriteRecording.cpp src/configDirectoryLocation.cpp src/utils.cpp)
if (WITH_OPENCV)
    target_compile_definitions(RealsenseRecording PUBLIC -DOPENCV)
endif ()

add_executable(RealsenseRecord src/main.cpp)
target_link_libraries(RealsenseRecord RealsenseRecording ${EXTERNAL_LIBS})
if (WITH_OPENCV)
    target_compile_definitions(RealsenseRecord PUBLIC -DOPENCV)
endif ()
